# rofl

./: CMakeLists.txt  complextest
app/: CMakeLists.txt  line_strip_output.hpp  main.cpp  polygon.cpp
app/line_strip/: object_fwd.hpp  parameters_fwd.hpp  parameters_impl.hpp  style.hpp
app/line_strip/include/rofl/line_strip/: object.hpp  object_fwd.hpp  object_impl.hpp  object_output.hpp  parameters.hpp  parameters_fwd.hpp  parameters_impl.hpp  style.hpp
impl/include/rofl/aux/astar/: found_goal.hpp  goal_visitor.hpp  heuristic.hpp
impl/include/rofl/aux/astar/impl/: goal_visitor.hpp  heuristic.hpp
impl/include/rofl/aux/graph/: find_adjacent.hpp  merge.hpp  mergeable.hpp  on_boundary.hpp  placement.hpp  placement_fwd.hpp
impl/include/rofl/aux/math/: area_sign.hpp  left.hpp  left_on.hpp
impl/include/rofl/aux/polygonizers/: log_location.hpp
impl/include/rofl/aux/polygonizers/triangle/: accumulate_sizes.hpp  add_polygon.hpp  clear_pod.hpp  determine_adjacent_edge.hpp  fill_intermediate.hpp  fill_points.hpp  hole_vector.hpp  intermediate.hpp  is_convex.hpp  line_segments.hpp  log_location.hpp  object.hpp  point_vector.hpp  segment_vector.hpp  triangle_line_segments.hpp  triangulation.hpp
impl/src/graph/: find_adjacent.cpp  merge.cpp  mergeable.cpp
impl/src/polygonizers/: log_location.cpp
impl/src/polygonizers/triangle/: object.cpp  triangulation.cpp
include/rofl/: CMakeLists.txt  consume.hpp  create_polygonizer.hpp  dereference.hpp  index.hpp  indexed_line_segment.hpp  indexed_line_segment_fwd.hpp  indexed_point.hpp  indexed_point_fwd.hpp  indexed_polygon.hpp  indexed_polygon_fwd.hpp  line_segment.hpp  line_segment_fwd.hpp  log.hpp  log_context.hpp  log_location.hpp  point.hpp  point_fwd.hpp  polygon.hpp  polygon_fwd.hpp  polygon_with_holes.hpp  polygon_with_holes_fwd.hpp  polygonizer.hpp  polygonizer_fwd.hpp  polygonizer_unique_ptr.hpp  symbol.hpp  unit.hpp
include/rofl/astar/: generate_path.hpp  generate_trail.hpp  path.hpp  trail.hpp
include/rofl/graph/: const_vertex_iterator.hpp  edge_descriptor.hpp  edge_iterator.hpp  edge_properties.hpp  edge_properties_fwd.hpp  object.hpp  object_fwd.hpp  out_edge_iterator.hpp  properties.hpp  properties_fwd.hpp  property_tag.hpp  property_tag_fwd.hpp  simplify.hpp  vertex_descriptor.hpp  vertex_iterator.hpp  vertex_properties.hpp  vertex_properties_fwd.hpp  vertices_begin.hpp  vertices_end.hpp
include/rofl/math/: barycenter.hpp  line_segment.hpp  line_segment_decl.hpp  line_segment_fwd.hpp  line_segment_impl.hpp  polygon.hpp  polygon_decl.hpp  polygon_fwd.hpp  polygon_impl.hpp  polygon_input.hpp  polygon_output.hpp  polygon_with_holes.hpp  polygon_with_holes_decl.hpp  polygon_with_holes_fwd.hpp  polygon_with_holes_impl.hpp
media/: test.txt
src/: CMakeLists.txt  create_polygonizer.cpp  cyclic_iterator.hpp  cyclic_iterator_impl.hpp  dereference.cpp  indexed_point.cpp  log.cpp  log_context.cpp  log_location.cpp  log_location.hpp  log_parameters.cpp  log_parameters.hpp  polygonizer.cpp  rofl_files.txt
src/astar/: found_goal.hpp  generate_path.cpp  generate_trail.cpp  goal_visitor.hpp  goal_visitor_impl.hpp  heuristic.hpp  heuristic_impl.hpp
src/aux/: log_parameters.cpp
src/aux/graph/: find_adjacent.cpp  merge.cpp  mergeable.cpp
src/aux/polygonizers/: log.cpp  log_location.cpp
src/aux/polygonizers/triangle/: intermediate.cpp  log.cpp  log_location.cpp  object.cpp  triangulation.cpp
src/graph/: area_sign.hpp  cyclic_iterator.hpp  cyclic_iterator_impl.hpp  edge_properties.cpp  find_adjacent.cpp  find_adjacent.hpp  find_previous.cpp  find_previous.hpp  left.hpp  left_on.hpp  merge.cpp  merge.hpp  mergeable.cpp  mergeable.hpp  on_boundary.hpp  placement.hpp  properties.cpp  simplify.cpp  vertex_properties.cpp  vertices_begin.cpp  vertices_end.cpp
src/include/rofl/aux/: log_parameters.hpp
src/include/rofl/aux/astar/: found_goal.hpp  goal_visitor.hpp  goal_visitor_impl.hpp  heuristic.hpp  heuristic_impl.hpp
src/include/rofl/aux/astar/impl/: goal_visitor.hpp  heuristic.hpp
src/include/rofl/aux/graph/: find_adjacent.hpp  merge.hpp  placement.hpp  placement_fwd.hpp
src/include/rofl/aux/math/: area_sign.hpp
src/include/rofl/aux/polygonizers/: log.hpp  log_location.hpp
src/include/rofl/aux/polygonizers/triangle/: accumulate_sizes.hpp  add_polygon.hpp  determine_adjacent_edge.hpp  edge_angle.hpp  fill_intermediate.hpp  fill_points.hpp  hole_vector.hpp  intermediate.hpp  is_convex.hpp  line_segments.hpp  log.hpp  log_location.hpp  object.hpp  point_vector.hpp  segment_vector.hpp  triangle_line_segments.hpp  triangulation.hpp
src/math/: area_sign.hpp  left.hpp  left_on.hpp
src/polygonizers/: CMakeLists.txt  log.hpp  log_location.cpp  log_location.hpp
src/polygonizers/src/: log.cpp
src/polygonizers/triangle/: CMakeLists.txt  accumulate_sizes.hpp  add_polygon.hpp  clear_pod.hpp  determine_adjacent_edge.hpp  edge_angle.hpp  fill_intermediate.hpp  fill_points.hpp  inner_point.hpp  intermediate.hpp  is_convex.hpp  line_segments.hpp  log.hpp  log_location.hpp  object.hpp  triangle_line_segments.hpp  triangulation.hpp
src/polygonizers/triangle/impl/: CMakeLists.txt  impl.hpp  triangle.c  triangle.h
src/polygonizers/triangle/src/: intermediate.cpp  log.cpp  log_location.cpp  object.cpp  triangulation.cpp
test/: CMakeLists.txt  default_texture_creator.cpp  default_texture_creator.hpp  line_strip_output.hpp  main.cpp  polygon.cpp
test/line_strip/: object.hpp  object_fwd.hpp  object_impl.hpp  parameters.hpp  parameters_fwd.hpp  parameters_impl.hpp  style.hpp
triangle/: CMakeLists.txt
triangle/include/triangle/: impl.hpp
triangle/src/: triangle.c
util/: check_includes.sh  update_cmake.sh
