FIND_PACKAGE(
	SGE REQUIRED
	COMPONENTS systems texture viewport
)

ADD_EXECUTABLE(
	roflmaintest
	main.cpp
)

TARGET_LINK_LIBRARIES(
	roflmaintest
	rofl
	${Fcppt_LIBRARIES}
	${SGE_CORE_LIBRARY}
	${SGE_IMAGE_LIBRARY}
	${SGE_INPUT_LIBRARY}
	${SGE_RENDERER_LIBRARY}
	${SGE_SYSTEMS_LIBRARY}
	${SGE_VIEWPORT_LIBRARY}
	${SGE_WINDOW_LIBRARY}
)

ADD_EXECUTABLE(
	roflpolygonbuilder
	polygon.cpp
	default_texture_creator.cpp
)

TARGET_LINK_LIBRARIES(
	roflpolygonbuilder
	${Fcppt_LIBRARIES}
	${SGE_CORE_LIBRARY}
	${SGE_IMAGE_LIBRARY}
	${SGE_IMAGE2D_LIBRARY}
	${SGE_INPUT_LIBRARY}
	${SGE_RENDERER_LIBRARY}
	${SGE_SYSTEMS_LIBRARY}
	${SGE_VIEWPORT_LIBRARY}
	${SGE_TEXTURE_LIBRARY}
	${SGE_WINDOW_LIBRARY}
)

INSTALL(
	TARGETS roflmaintest
	DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
)

INSTALL(
	TARGETS roflpolygonbuilder
	DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
)
