ADD_DEFINITIONS(
	"-DSINGLE -DTRILIBRARY -DANSI_DECLARATORS -DLINUX"
)

IF (CMAKE_COMPILER_IS_GNUCXX OR COMPILER_IS_CLANGPP)
	REMOVE_DEFINITIONS(-Woverloaded-virtual)
	REMOVE_DEFINITIONS(-Wnon-virtual-dtor)
	REMOVE_DEFINITIONS(-Wsign-promo)
	REMOVE_DEFINITIONS(-Wold-style-cast)
	REMOVE_DEFINITIONS(-pedantic-errors)
ENDIF()

ADD_LIBRARY(
	rofltriangleimpl
	SHARED
	triangle.c
)

IF(
	UNIX
)
	TARGET_LINK_LIBRARIES(
		rofltriangleimpl
		m
	)
ENDIF()

INSTALL(
	TARGETS
	rofltriangleimpl
	DESTINATION
	${CMAKE_INSTALL_PREFIX}/lib
)
