ADD_DEFINITIONS(
	"-DSINGLE -DTRILIBRARY -DANSI_DECLARATORS -DLINUX"
)

IF (CMAKE_COMPILER_IS_GNUCXX OR FCPPT_UTILS_COMPILER_IS_CLANGPP)
	REMOVE_DEFINITIONS(-std=c++0x)
	REMOVE_DEFINITIONS(-Wdelete-non-virtual-dtor)
	REMOVE_DEFINITIONS(-Woverloaded-virtual)
	REMOVE_DEFINITIONS(-Wnon-virtual-dtor)
	REMOVE_DEFINITIONS(-Wsign-promo)
	REMOVE_DEFINITIONS(-Wold-style-cast)
	REMOVE_DEFINITIONS(-pedantic-errors)
	REMOVE_DEFINITIONS(-fvisibility=hidden)
ENDIF()

# remove broken timer code
ADD_DEFINITIONS(
	-D NO_TIMER
)

ADD_LIBRARY(
	rofltriangleimpl
	SHARED
	triangle.c
)

IF(
	UNIX
)
	TARGET_LINK_LIBRARIES(
		rofltriangleimpl
		m
	)
ENDIF()

INSTALL(
	TARGETS
	rofltriangleimpl
	DESTINATION
	${CMAKE_INSTALL_PREFIX}/lib
)
